--- a/PositionIn/EventDetails/PositionIn.EventDetailsViewController.xib
+++ b/PositionIn/EventDetails/PositionIn.EventDetailsViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -41,7 +41,7 @@
                             <rect key="frame" x="0.0" y="252" width="600" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$99" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMi-0H-hX8">
-                                    <rect key="frame" x="10" y="15" width="26" height="18"/>
+                                    <rect key="frame" x="10" y="15" width="25.5" height="18"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -58,7 +58,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A9g-V6-spc">
-                            <rect key="frame" x="0.0" y="300" width="600" height="100"/>
+                            <rect key="frame" x="0.0" y="300" width="600" height="100.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Forest" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXA-Ry-YIz">
                                     <rect key="frame" x="10" y="10" width="580" height="26"/>
@@ -70,7 +70,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.09 miles" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGP-Qf-MYX">
-                                    <rect key="frame" x="44" y="45" width="546" height="18"/>
+                                    <rect key="frame" x="44" y="45" width="546" height="19"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                     <color key="textColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
@@ -87,22 +87,26 @@
                                         <userDefinedRuntimeAttribute type="string" keyPath="text" value=""/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eventPeopleAttending" translatesAutoresizingMaskIntoConstraints="NO" id="PDh-MM-kpM">
-                                    <rect key="frame" x="11" y="43" width="25" height="21"/>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eventPeopleAttending" translatesAutoresizingMaskIntoConstraints="NO" id="PDh-MM-kpM">
+                                    <rect key="frame" x="11" y="42" width="25" height="22"/>
                                     <color key="tintColor" red="0.92941176469999998" green="0.1058823529" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="Rnm-FN-YEx" secondAttribute="leading" constant="34" id="0Uv-5X-YgB"/>
+                                <constraint firstItem="PDh-MM-kpM" firstAttribute="leading" secondItem="A9g-V6-spc" secondAttribute="leading" constant="11" id="4FG-fW-xkR"/>
                                 <constraint firstItem="Rnm-FN-YEx" firstAttribute="top" secondItem="CGP-Qf-MYX" secondAttribute="bottom" constant="10" id="8bW-rU-chK"/>
+                                <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="PDh-MM-kpM" secondAttribute="trailing" constant="8" id="DQb-LF-RbN"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="leading" secondItem="vXA-Ry-YIz" secondAttribute="leading" constant="34" id="Nsq-rq-kGT"/>
                                 <constraint firstAttribute="bottom" secondItem="Rnm-FN-YEx" secondAttribute="bottom" constant="10" id="YOM-i0-d9V"/>
                                 <constraint firstItem="vXA-Ry-YIz" firstAttribute="top" secondItem="A9g-V6-spc" secondAttribute="top" constant="10" id="Zkc-3D-2mW"/>
+                                <constraint firstItem="Rnm-FN-YEx" firstAttribute="top" secondItem="PDh-MM-kpM" secondAttribute="bottom" constant="9" id="bwF-4z-kT1"/>
                                 <constraint firstAttribute="trailing" secondItem="vXA-Ry-YIz" secondAttribute="trailing" constant="10" id="eLn-iu-eXr"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="trailing" secondItem="vXA-Ry-YIz" secondAttribute="trailing" id="gpQ-lf-uC9"/>
                                 <constraint firstItem="vXA-Ry-YIz" firstAttribute="leading" secondItem="A9g-V6-spc" secondAttribute="leading" constant="10" id="gwq-UT-yEc"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="trailing" secondItem="Rnm-FN-YEx" secondAttribute="trailing" id="m1a-nx-KxK"/>
+                                <constraint firstItem="PDh-MM-kpM" firstAttribute="top" secondItem="vXA-Ry-YIz" secondAttribute="bottom" constant="7" id="vNH-Zz-4Lx"/>
                                 <constraint firstItem="CGP-Qf-MYX" firstAttribute="top" secondItem="vXA-Ry-YIz" secondAttribute="bottom" constant="9" id="vx3-TF-vi5"/>
                             </constraints>
                         </view>
