--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                 <viewController storyboardIdentifier="BrowseVolunteerViewController" id="JIb-CZ-SRO" customClass="BrowseVolunteerViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="4Mm-Vv-a0o"/>
                     <connections>
-                        <segue destination="fxT-f9-lqb" kind="show" identifier="" id="6ZU-Ck-PGM"/>
+                        <segue destination="fxT-f9-lqb" kind="show" identifier="showVolunteerDetailsViewController" id="6ZU-Ck-PGM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rMv-UQ-wgc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1061,10 +1061,10 @@
                         <viewControllerLayoutGuide type="bottom" id="uYr-ph-THO"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HNT-o2-aLn">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Q89-Bs-eMV" customClass="TableView" customModule="PosInCore">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Q89-Bs-eMV" customClass="TableView" customModule="PosInCore">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -1441,8 +1441,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="6ZU-Ck-PGM"/>
         <segue reference="9u4-qy-iVR"/>
+        <segue reference="sAe-ix-Qfw"/>
         <segue reference="WXU-OU-n2l"/>
         <segue reference="ulD-Z3-59i"/>
-        <segue reference="ND0-h7-Vra"/>
     </inferredMetricsTieBreakers>
 </document>
